[gd_scene load_steps=7 format=2]

[ext_resource path="res://Art Assets/HammerStation.png" type="Texture" id=1]
[ext_resource path="res://Devices/HammerStation.gd" type="Script" id=2]
[ext_resource path="res://Art Assets/EKey.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.33889
height = 23.0983

[sub_resource type="Animation" id=2]
resource_name = "KeyPress"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KeyPressSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KeyPressSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("KeyPressSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KeyPressSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="HammerStation" type="Node2D" groups=["HammerStation"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -10, -9 )
rotation = 1.09956
shape = SubResource( 1 )

[node name="PaintCanPosition" type="Position2D" parent="."]
position = Vector2( -2, -8 )

[node name="KeyPressSprite" type="Sprite" parent="."]
position = Vector2( 12, 0 )
texture = ExtResource( 3 )
hframes = 4

[node name="KeyPressAnimator" type="AnimationPlayer" parent="."]
anims/KeyPress = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
